# rosu-ppplus-csr-ffi

.github/workflows/: ci.yml
JavaRosuPP/: pom.xml
JavaRosuPP/src/main/java/desu/life/: RosuFFI.java
SharpRosuPP/RosuPP/: NativeMethods.cs  Rosu.cs  RosuFFI.cs
SharpRosuPP/RosuPP.Tests/: Conveter.cs  PPUnitTest.cs  RosuPP.Tests.csproj
bindings/: RosuFFI.cs  RosuFFI.h  RosuFFI.java  RosuFFI.py
rosu_pp_ffi/: Cargo.toml
rosu_pp_ffi/src/: hitresult_priority.rs  lib.rs  mods.rs  owned_string.rs  state.rs
rosu_pp_ffi/src/beatmap/: hitobjects.rs  mod.rs  too_suspicious.rs
rosu_pp_ffi/src/osu/: attributes.rs
