[package]
name = "rosu_pp_ffi"
version = "0.2.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
interoptopus = { version = "0.14.27", features = ["log", "serde"] }
rosu-pp = { git = "https://github.com/fantasyzhjk/rosu-ppplus-csr", rev = "ea8533dce4d7ee1df1b4c411a106f1124368975b" }
rosu-map = { version = "0.2.1" }
rosu-mods = { version = "0.3.0", features = ["serde"] }
thiserror = "2.0.12"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
